Оформил раздел new v2 в css

--- a/index2.html
+++ b/index2.html
@@ -25,49 +25,59 @@
     
         <main>
             <section class="new2">
-              <h2>Новинки</h2>
-              <ul class="new-list2">
-                <li class="new-list-item2">
-                    <h3>Вахтёр</h3>
-                    <table class="char-table2">
-                        <tbody>
+              <div class="container">
+                <h2>Новинки</h2>
+                <ul class="new-list2">
+                  <li class="new-list-item2">
+                      <h3>Вахтёр</h3>
+                      <div class="item-description2">
+                        <table class="char-table2">
+                            <tbody>
+                                <tr>
+                                    <td>АЛК.</td>
+                                    <td>&lt; 1%</td>
+                                </tr>
+                                <tr>
+                                    <td>ККАЛ</td>
+                                    <td>35</td>
+                                </tr>
+                            </tbody>
+                        </table>                      
+                        <p class="new-details2">Ржаной хлеб, Вода, Солод, Соль</p>
+                      </div> 
+                      <img src="img/bottle-left.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">                       
+                      <p class="new-description2">Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+                      <div class="list-bottom2">
+                        <a class="button2 more2" href="#">Подробнее</a>
+                        <a class="button2 buy2" href="#">Купить</a>
+                        <p class="price2">150 Р.</p>
+                      </div>
+                  </li>
+                  <li class="new-list-item2">
+                      <h3>РОМАНТИК</h3>
+                      <div class="item-description2">
+                        <table class="char-table2">
                             <tr>
-                                <td>АЛК.</td>
-                                <td>&lt; 1%</td>
+                              <td>АЛК.</td>
+                              <td>&lt; 0,5%</td>
                             </tr>
                             <tr>
-                                <td>ККАЛ</td>
-                                <td>35</td>
+                              <td>ККАЛ</td>
+                              <td>27</td>
                             </tr>
-                        </tbody>
-                    </table>
-                    <p class="new-details2">Ржаной хлеб, Вода, Солод, Соль</p>
-                    <img src="img/bottle-left.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">   
-                    <p class="new-description2">Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-                    <a class="button2 more2" href="#">Подробнее</a>
-                    <a class="button2 buy2" href="#">Купить</a>
-                    <p class="price2">150 Р.</p>
-                </li>
-                <li class="new-list-item2">
-                    <h3>РОМАНТИК</h3>
-                    <table class="char-table2">
-                        <tr>
-                          <td>АЛК.</td>
-                          <td>&lt; 0,5%</td>
-                        </tr>
-                        <tr>
-                          <td>ККАЛ</td>
-                          <td>27</td>
-                        </tr>
-                    </table>
-                    <p class="new-details2">Ячменный хлеб, Вода, Солод, Апельсин</p>
-                    <img src="img/bottle-right.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
-                    <p class="new-description2">Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-                    <a class="button2 more2" href="#">Подробнее</a>
-                    <a class="button2 buy2" href="#">Купить</a>
-                    <p class="price2">90 Р.</p>
-                </li>
-              </ul>                 
+                        </table>
+                        <p class="new-details2">Ячменный хлеб, Вода, Солод, Апельсин</p>
+                      </div> 
+                      <img src="img/bottle-right.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
+                      <p class="new-description2">Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+                      <div class="list-bottom2">
+                        <a class="button2 more2" href="#">Подробнее</a>
+                        <a class="button2 buy2" href="#">Купить</a>
+                        <p class="price2">90 Р.</p>
+                      </div>
+                  </li>
+                </ul> 
+              </div>                
             </section>
     
             <section class="features2">
