Оформил раздел Ordering v2 в css

--- a/index2.html
+++ b/index2.html
@@ -182,15 +182,21 @@
             <section class="ordering2">
               <div class="container">
                 <h2>Заказать</h2>
-                <p class="form-description2">Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%</p>
+                <p class="form-description2">Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.</p>
                 <form class="order-form2" action="" method="get">
                   <label for="name">Представьтесь:</label>
                   <input type="text" id="name" name="name">
-                  <label for="tel">Номер телефона:</label>
-                  <input type="text" id="tel" name="tel">
-                  <label for="extra-tel">Доп. номер:</label>
-                  <input type="text" id="extra-tel" name="extra-tel">
-                  <label for="email">E-mail:</label>
+                  <div class="telephone-block2">
+                    <div class="telephone2">
+                      <label for="tel">Номер телефона:</label>
+                      <input type="text" id="tel" name="tel">
+                    </div>
+                    <div class="telephone2">
+                      <label for="extra-tel">Доп. номер:</label>
+                      <input type="text" id="extra-tel" name="extra-tel">
+                    </div>
+                  </div>
+                  <label for="email">Email:</label>
                   <input type="text" id="email" name="email">
                   <label for="amount">Объём заказа:</label>
                   <select name="amount" id="amount">
